--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,8 @@ layout: default
 <div class="home">
 
   {{ content }}
+  
+  -> {{ site.data }}
 
   <p>
     This is an example of how you can integrate the 
