--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,17 +4,12 @@ layout: default
 
 <div class="home">
 
+->{{site.title}}<br>
+->{{title}}<br>
+
+  
   {{ content }}
   
-  -> {{ site.data }}
-
-  <p>
-    This is an example of how you can integrate the 
-    <a href="https://community.algolia.com/jekyll-algolia/">
-      <code>jekyll-algolia</code>
-    </a> plugin into your Jekyll theme.
-  </p>
-
   <p>
     Check out the 
     <a href="https://github.com/algolia/jekyll-algolia-example">source</a>
